fix the Wrong padding when input is filled

--- a/src/components/main-page/sections/headerInput/headerInput.module.scss
+++ b/src/components/main-page/sections/headerInput/headerInput.module.scss
@@ -85,7 +85,7 @@
 
 .amountInput {
   width: 210px;
-  height: 51px !important;
+  height: 45px !important;
   background: #ffffff;
   font-family: Roboto;
   font-style: normal;
@@ -94,6 +94,7 @@
   line-height: 24px;
   text-align: left;
   padding-left: 10px;
+  padding-top: 7px;
   color: #14133a;
   border-color: transparent;
   outline: none;
@@ -188,7 +189,7 @@
   line-height: 24px;
   text-transform: capitalize;
   text-align: left;
-  padding: 0 12px;
+  padding-left: 8px;
   bottom: 70px;
   left: 30px;
   color: rgba(0, 0, 0, 0.6);
